Fixed overflow (again).

--- a/web/app.fluidity.money/app/styles/dashboard/home.css
+++ b/web/app.fluidity.money/app/styles/dashboard/home.css
@@ -3,6 +3,8 @@ main > section#graph {
 }
 
 section#transactions {
+  width: auto;
+  max-width: 100%;
   min-height: 5vh;
 }
 
